# RGB-algorithmic-problem

./: .gitignore  CMakeLists.txt  README.md
benchmarking/: advancedSort.txt  breadthSearch.txt  initialTripleSearch.txt  naiveSorting.txt
src/: CommandLineArgumentsParsing.cpp  CommandLineArgumentsParsing.h  Commands.cpp  Commands.h  InteractionWithUser.cpp  InteractionWithUser.h  main.cpp
src/algorithm_lib/: AdvancedSearch.cpp  AdvancedSearch.h  AdvancedSort.cpp  AdvancedSort.h  BreadthSearch.cpp  BreadthSearch.h  CMakeLists.txt  InitialTripleSearch.cpp  InitialTripleSearch.h  MatchingGroup.cpp  MatchingGroup.h  NaiveSorting.cpp  NaiveSorting.h  PrintingUtilities.cpp  PrintingUtilities.h  RandomUtilities.cpp  RandomUtilities.h  RgbAlgorithmUtilities.cpp  RgbAlgorithmUtilities.h  TimeMeasurment.cpp  TimeMeasurment.h  WindowsPrintingUtilities.cpp  WindowsPrintingUtilities.h  breadthSearch.cpp  breadthSearch.h  bruteForceSorting.cpp  bruteForceSorting.h  initialTripleSearch.cpp  initialTripleSearch.h  naiveSorting.cpp  naiveSorting.h  ramp.cpp  ramp.h  randomUtilities.cpp  randomUtilities.h  rgbAlgorithm.cpp  rgbAlgorithm.h  rgbAlgorithmUtilites.cpp  rgbAlgorithmUtilites.h
src/python_utilities/: plotting.py
src/tests/: AdvanceSearchTest.cpp  AdvanceSortTest.cpp  AlgorithmUtilitiesTest.cpp  BreadthSearchTest.cpp  CMakeLists.txt  InitialTripleSearchTest.cpp  NaiveSortingTest.cpp  RandomUtilitiesTest.cpp  algorithmUtilitesTest.cpp  breadthSearchTest.cpp  randomUtilitiesTest.cpp  tmpTest.cpp  utilitesTest.cpp
