project(RGB_algorithmic_problem)

add_library(algorithm_lib STATIC RgbAlgorithmUtilities.cpp BreadthSearch.cpp RandomUtilities.cpp NaiveSorting.h NaiveSorting.cpp InitialTripleSearch.cpp InitialTripleSearch.h AdvancedSort.cpp AdvancedSort.h MatchingGroup.cpp MatchingGroup.h WindowsPrintingUtilities.cpp WindowsPrintingUtilities.h PrintingUtilities.cpp PrintingUtilities.h)